[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "quilr-litellm-guardrails"
version = "0.1.0"
description = "Quilr Guardrails Integration for LiteLLM"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Quilr"}
]
keywords = ["litellm", "guardrails", "quilr", "llm", "ai-safety"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "litellm>=1.0.0",
]

[project.urls]
Homepage = "https://quilr.ai"

[tool.setuptools]
py-modules = ["quilr_litellm_guardrails"]
